--- a/projects/page-builder/src/assets/style.scss
+++ b/projects/page-builder/src/assets/style.scss
@@ -1,3 +1,4 @@
 @use '../extensions/notify/style.scss';
 @use '../styles/paper.scss';
 @use '../../../../node_modules/ngx-drag-drop-kit//assets/styles.css';
+@use '../styles/inputs.scss';
