feat: remove unused SCSS files and update component styles references

--- a/projects/page-builder/src/controls/size-control/size-control.component.html
+++ b/projects/page-builder/src/controls/size-control/size-control.component.html
@@ -50,7 +50,7 @@
       <label for="{{ property }}">{{ label }}:</label>
     </td>
     <td>
-      <div class="input-group">
+      <div class="pi-group">
         <input
           id="{{ property }}"
           [type]="sizeValue.unit != 'auto' ? 'number' : 'text'"
@@ -64,6 +64,7 @@
           [(ngModel)]="sizeValue.unit"
           (ngModelChange)="onChangeUnit(property)"
           [name]="'unit-' + property"
+          class="unit"
         >
           <option value="auto">{{ isMaxProperty(property) ? 'None' : 'Auto' }}</option>
           <option value="px">px</option>
