--- a/projects/page-builder/src/controls/textcss-control/textcss-control.component.scss
+++ b/projects/page-builder/src/controls/textcss-control/textcss-control.component.scss
@@ -36,7 +36,7 @@
     color: transparent;
     pointer-events: none;
     z-index: 100;
-    overflow: hidden;
+    // overflow: hidden;
 
     // Syntax highlighting colors
     .css-property {
