--- a/projects/page-builder/src/controls/size-control/size-control.component.html
+++ b/projects/page-builder/src/controls/size-control/size-control.component.html
@@ -53,7 +53,7 @@
       <div class="pi-group">
         <input
           [id]="property"
-          [name]="property"
+          [attr.name]="property"
           [type]="sizeValue.unit != 'auto' ? 'number' : 'text'"
           [(ngModel)]="sizeValue.value"
           (ngModelChange)="update()"
@@ -64,7 +64,7 @@
         <select
           [(ngModel)]="sizeValue.unit"
           (ngModelChange)="onChangeUnit(property)"
-          [name]="'unit-' + property"
+          [attr.name]="'unit-' + property"
           class="unit"
         >
           <option value="auto">{{ isMaxProperty(property) ? 'None' : 'Auto' }}</option>
