--- a/projects/page-builder/src/controls/spacing-control/spacing-control.component.html
+++ b/projects/page-builder/src/controls/spacing-control/spacing-control.component.html
@@ -72,7 +72,7 @@
             <option value="rem">rem</option>
             <option value="%">%</option>
           </select>
-          <button class="btn-clear" type="button" (click)="clear(spacing, direction)">x</button>
+          <button class="btn-clear" type="button" (click)="clear(spacing)">x</button>
         </div>
       </td>
     </tr>
