--- a/projects/page-builder/src/lib/toolbar/toolbar.component.scss
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.scss
@@ -17,6 +17,7 @@
     cursor: pointer;
     background: transparent;
     color: inherit;
+    width: 38px;
     min-width: 38px;
     max-height: 100%;
     height: 100%;
