--- a/projects/demo/src/app/builder/builder.component.html
+++ b/projects/demo/src/app/builder/builder.component.html
@@ -1,1 +1,1 @@
-<ngx-page-builder [dynamicData]="dynamicData"></ngx-page-builder>
+<ngx-page-builder [dynamicData]="dynamicData" [viewMode]="'WebPage'"></ngx-page-builder>
