--- a/projects/page-builder/src/lib/page-preview/page-preview.component.html
+++ b/projects/page-builder/src/lib/page-preview/page-preview.component.html
@@ -1,6 +1,7 @@
 <div
-  class="ngx-page-builder paper {{ data?.config?.size }} {{ data?.config?.orientation }}"
+  class="ngx-page-builder"
   [class.is-print-page]="isPrintPage"
+  [class]="containerClassName"
   #paper
   [attr.dir]="data?.config?.direction"
 ></div>
