--- a/projects/demo/src/app/builder/builder.component.html
+++ b/projects/demo/src/app/builder/builder.component.html
@@ -1,4 +1,5 @@
 <button (click)="getData()">get data</button>
+<a routerLink="/preview" target="_blank">preview</a>
 <ngx-page-builder
   #pageBuilder
   [dynamicData]="dynamicData"
