--- a/projects/page-builder/src/components/css-classes-editor/css-classes-editor.component.html
+++ b/projects/page-builder/src/components/css-classes-editor/css-classes-editor.component.html
@@ -3,6 +3,8 @@
     <div #highlightDiv class="css-highlight-layer" [attr.aria-hidden]="true"></div>
     <textarea
       #editorTextarea
+      id="css-textarea-layer"
+      name="css-textarea-layer"
       class="css-textarea-layer"
       spellcheck="false"
       [value]="textCss"
