--- a/projects/page-builder/src/components/block-settings/block-settings.component.html
+++ b/projects/page-builder/src/components/block-settings/block-settings.component.html
@@ -1,11 +1,24 @@
 <div class="inner">
-  <p>{{ item?.tag }}</p>
-  @if (item && item.customComponent && settingComponent) {
-    <ng-container
-      [ngComponentOutlet]="settingComponent"
-      [ngComponentOutletInjector]="item.customComponent.compInjector"
-    ></ng-container>
-  } @else {
-    <p>No settings available.</p>
+  @if (item) {
+    <p>{{ item.tag }}</p>
+    <p>{{ item.id }}</p>
+    can be set content: {{ item.CanBeSetContent }}
+    @if (item.CanBeSetContent || item.isImageTag) {
+      <text-binding
+        [item]="item"
+        [parentCollection]="parentCollection"
+        [collectionDsList]="collectionDsList"
+        (change)="onChangeProperties()"
+      ></text-binding>
+    }
+
+    @if (item.customComponent && settingComponent) {
+      <ng-container
+        [ngComponentOutlet]="settingComponent"
+        [ngComponentOutletInjector]="item.customComponent.compInjector"
+      ></ng-container>
+    } @else {
+      <p>No settings available.</p>
+    }
   }
 </div>
