--- a/projects/page-builder/src/lib/css-file-dialog/css-file-dialog.component.html
+++ b/projects/page-builder/src/lib/css-file-dialog/css-file-dialog.component.html
@@ -1,10 +1,19 @@
-<h2 mat-dialog-title>ویرایش CSS Classes</h2>
+<h2 mat-dialog-title>CSS Classes</h2>
 <mat-dialog-content>
-  <css-classes-editor [formControl]="classesControl"></css-classes-editor>
+  <tab-group>
+    @for (item of cls.cssFileData; track $index) {
+      <tab-item [title]="item.name" [active]="true">
+        <css-classes-editor [(ngModel)]="item.data"></css-classes-editor>
+      </tab-item>
+    }
+  </tab-group>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button (click)="onCancel()">لغو</button>
-  <button mat-raised-button color="primary" (click)="onSave()" [disabled]="!classesControl.value">
-    ذخیره
-  </button>
+  <button mat-button (click)="onCancel()">Cancel</button>
+
+  @if (enableAddCssFile) {
+    <button mat-raised-button color="primary" (click)="addFile()" [disabled]="loading">
+      Add file
+    </button>
+  }
 </mat-dialog-actions>
