--- a/projects/page-builder/src/lib/css-file-dialog/css-file-dialog.component.scss
+++ b/projects/page-builder/src/lib/css-file-dialog/css-file-dialog.component.scss
@@ -1,6 +1,3 @@
-mat-dialog-content {
-  width: 80vw;
-  min-width: 600px;
-  min-height: 500px;
-  padding: 20px;
+.mat-mdc-dialog-content {
+  padding: 0px;
 }
